<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="100dp"
         android:onClick="startGame"
        android:text="@string/sg"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/button2"
        android:onClick="switch_to_manual"
        android:text="@string/Manual"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="begin_exit"
        android:text="@string/Quit"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

</RelativeLayout>