<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click_leave"
            android:text="@string/LEAVE" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.60" >
        </LinearLayout>

        <Button
            android:id="@+id/btn_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click_sell"
            android:text="@string/SELL" />

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click_buy"
            android:text="@string/BUY" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1.95"
            android:scaleType="fitXY"
            android:src="@drawable/pharma" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="400px"
            android:layout_height="200px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="33dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/alert_light_frame" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="37dp"
            android:text="@string/greet"
            android:textColor="#000000"
            android:textSize="30px" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="300px"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#44444444"
            android:drawSelectorOnTop="true" >
        </ListView>

    </RelativeLayout>

</LinearLayout>